--- a/src/main/resources/static/css/version/tech.css
+++ b/src/main/resources/static/css/version/tech.css
@@ -285,7 +285,7 @@ a:focus {
 .navbar-inverse {
     color: #ffffff !important;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-    background: rgba(0, 0, 0, 0) linear-gradient(to right, #95959e 0px, #1a1f1a 100%) repeat scroll 0 0 !important
+    background: rgba(0, 0, 0, 0) linear-gradient(to right, #6a6afa 0px, #1a1f1a 100%) repeat scroll 0 0 !important
 }
 
 .gp-button.btn-primary:hover,
