--- a/src/main/resources/static/css/version/tech.css
+++ b/src/main/resources/static/css/version/tech.css
@@ -197,7 +197,7 @@ h5 {
 }
 
 .footer {
-    background-color: #000000;
+    background-color: rgba(27, 63, 108, 0.98);
     background-image: none;
 }
 
